Initial 1.18.2 release
Editmobdrops version 1.4.4